Added tags to  <head> section for SEO

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Portfolio</title>
 		<link rel="stylesheet" href="style.css" />
+		<title>Roberto Togni</title>
+		<meta
+			name="description"
+			content="Welcome to my website. Here you will find information about my projects, skills and experience as a CS student." />
 		<!-- <link
 			rel="stylesheet"
 			href="fontawesome-free-6.5.1-web/css/fontawesome.min.css" /> -->
