Small fix to <head> section

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<title>Portfolio</title>
 		<link rel="stylesheet" href="style.css" />
 		<title>Roberto Togni</title>
-		<meta
+		<!-- <meta
 			name="description"
-			content="Welcome to my website. Here you will find information about my projects, skills and experience as a CS student." />
+			content="Welcome to my website. Here you will find information about my projects, skills and experience as a CS student." /> -->
 		<!-- <link
 			rel="stylesheet"
 			href="fontawesome-free-6.5.1-web/css/fontawesome.min.css" /> -->
